--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ button i {
 #nav-holder {
   height: 78px;
 }
+#primary-navbarOwn.affix,
 #primary-navbar.affix,
 #primary_navbar_blog.affix,
 #primary-navbar-video.affix {
@@ -603,7 +604,7 @@ footer h2 {
 
 /*story section images*/
 .story-img-1 {
-  background: url("../img/story_1.jpg") no-repeat scroll center center / cover
+  background: url("../img/gleny/dama_alpaca.jpg") no-repeat scroll center center / cover
     rgba(0, 0, 0, 0);
 }
 .story-img-2 {
@@ -624,14 +625,14 @@ footer h2 {
   width: 100%;
   border-radius: 3px;
 }
-.story-img-1,
+/* .story-img-1,
 .story-img-2,
 .story-img-3,
 .story-img-4 {
-  height: 17rem;
+ height: 17rem;
   width: 100%;
   border-radius: 3px;
-}
+} */
 #story .tline-title {
   margin-top: 17px;
 }
@@ -843,24 +844,24 @@ footer h2 {
   background: rgb(0, 0, 0);
   background: -moz-linear-gradient(
     90deg,
-    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.2) 0%,
     rgba(255, 255, 255, 1) 33.3%,
     rgba(255, 255, 255, 1) 66.6%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgba(0, 0, 0, 0.2) 100%
   );
   background: -webkit-linear-gradient(
     90deg,
-    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.2) 0%,
     rgba(255, 255, 255, 1) 33.3%,
     rgba(255, 255, 255, 1) 66.6%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgba(0, 0, 0, 0.2) 100%
   );
   background: linear-gradient(
     90deg,
-    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.2) 0%,
     rgba(255, 255, 255, 1) 33.3%,
     rgba(255, 255, 255, 1) 66.6%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgba(0, 0, 0, 0.2) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
   /* background: url(../img/init/barra.svg) no-repeat center center / cover rgba(0, 0, 0, 0);
@@ -1243,6 +1244,36 @@ select.form-control:not([size]):not([multiple]) {
 
 .esp_logo{
 	width: 20%;
+}
+
+.opcESP {
+  left: 0px;
+  bottom: 0px;
+}
+
+.opcESP:before {
+  content: "";
+  width: 2px;
+  background-color: #4949496d;
+  height: 45%;
+  position: absolute;
+  left: -10px;
+  top: 25px;
+  z-index: 1;
+}
+.opcESP:after {
+  content: "";
+  width: 2px;
+  background-color: #4949496d;
+  height: 45%;
+  position: absolute;
+  right: -10px;
+  bottom: 25px;
+  z-index: 1;
+}
+
+.esp_linHeight {
+  line-height: 2.2em;
 }
 
 /* 18 Footer Section
