--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@
 24 - Responsive
 ==================================================== */
 
+/* smtp */
+/* // Host: "smtp.gmail.com",
+  // Username: "glenycstr@gmail.com",
+  // Password: "gleny007", */
+
 /* 1 Base CSS
 ==================================================== */
 
