--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ button i {
 }
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #de037f;
+  color: #c7c7c7;
 }
 .navbar-collapse.collapse.show {
   overflow: hidden;
