--- a/css/style.css
+++ b/css/style.css
@@ -1606,6 +1606,11 @@ select.form-control:not([size]):not([multiple]) {
   background: url("../img/init/contacto.jpg") no-repeat center center / cover rgba(0, 0, 0, 0);
   color: rgb(0, 0, 0);
 }
+#asesoria {
+  padding: 8rem 0;
+  background: url("../img/asesoria/pronto.jpg") no-repeat center center / cover rgba(0, 0, 0, 0);
+  color: rgb(0, 0, 0);
+}
 
 /* .blur {
   background: rgb(255 255 255 / 20%);
